Viterbi: estimate.tex==>bayesnets.tex

--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -348,170 +348,14 @@ and $\nre(\estT)$    the \fncte{normalized rms error} \xref{def:nre} of an estim
   }
 \end{definition}
 
-%--------------------------------------
-\section{Estimation techniques}
-%--------------------------------------
+%======================================
+%\section{Estimation techniques}
+%======================================
 \begin{figure}
 \centering%
 \includegraphics{graphics/estimation_techniques.pdf}
-\caption{Estimation techniques\label{fig:est-tech}}
+\caption{Estimation Algorithms\label{fig:est-tech}}
 \end{figure}
-
-\begin{figure}[ht]
-\centering%
-\setlength{\unitlength}{0.15mm}
-\begin{picture}(1000,400)(-150,-300)
-  \thicklines
-  %\graphpaper[10](0,0)(700,100)
-  \put( 325,  50){\framebox(100, 50)[c]{techniques}          }
-
-  \put(  50,   0){\line    (  1,  0)   {750}                 }
- %\put( 375,   0){\circle*             { 10}                 }
-
-  \put(-100,-225){\line    (  1,  0)   {300}                 }
-  \put(  50,-225){\circle*             {  5}                 }
-  \put(-100,-250){\line    (  0,  1)   { 25}                 }
-  \put(  50,-250){\line    (  0,  1)   {150}                 }
-  \put( 200,-250){\line    (  0,  1)   { 25}                 }
-
-  \put(  50,- 50){\line    (  0,  1)   { 50}                 }
-  \put( 200,- 50){\line    (  0,  1)   { 50}                 }
-  \put( 350,- 50){\line    (  0,  1)   { 25}                 }
-  \put( 500,- 50){\line    (  0,  1)   { 25}                 }
-  \put( 425,- 25){\line    (  0,  1)   { 25}                 }
- %\put( 425,- 25){\circle*             { 10}                 }
-  \put( 350,- 25){\line    (  1,  0)   {150}                 }
-  \put( 650,- 50){\line    (  0,  1)   { 50}                 }
-  \put( 800,- 50){\line    (  0,  1)   { 50}                 }
-  \put( 375,   0){\line    (  0,  1)   { 50}                 }
-
-  \put(  50,-150){\line    (  0,  1)   { 50}                 }
-  \put( 200,-150){\line    (  0,  1)   { 50}                 }
-  \put( 350,-150){\line    (  0,  1)   { 50}                 }
-  \put( 500,-150){\line    (  0,  1)   { 50}                 }
-
-  \put( 500,-250){\line    (  0,  1)   { 50}                 }
-
-  \put(  60,- 45){\makebox (100, 40)[lt]{sequential}         }
-  \put(  60,- 45){\makebox (100, 40)[lb]{decoding}           }
-  \put( 210,- 45){\makebox (100, 35)[lt]{norm}       }
-  \put( 210,- 45){\makebox (100, 35)[lb]{minimization}       }
-  \put( 435,- 25){\makebox (100, 25)[l]{gradient search}     }
-  \put( 360,- 50){\makebox (100, 25)[l]{use $\grad_\vp$ only}}
-  \put( 510,- 50){\makebox (100, 25)[l]{$\grad_\vp,\grad^2_\vp$}}
-  \put( 660,- 50){\makebox (100, 50)[l]{inner product}       }
-  \put( 810,- 50){\makebox (100, 50)[l]{direct search}       }
-
-  \put(   0,-100){\framebox(100, 50)[c]{}                    }
-  \put(   0,- 90){\makebox (100, 30)[t]{code}                }
-  \put(   0,- 90){\makebox (100, 30)[b]{tree}                }
-  \put(   0,-300){\framebox(100, 50)[c]{}                    }
-
-  \put(-150,-295){\makebox (100, 40)[t]{trellis}             }
-  \put(-150,-295){\makebox (100, 40)[b]{(Viterbi)}           }
-  \put(-150,-300){\framebox(100, 50)[c]{}                    }
-  \put(   0,-295){\makebox (100, 40)[t]{Fano}                }
-  \put(   0,-295){\makebox (100, 40)[b]{algorithm}           }
-  \put(   0,-300){\framebox(100, 50)[c]{}                    }
-  \put( 150,-295){\makebox (100, 40)[t]{Stack}               }
-  \put( 150,-295){\makebox (100, 40)[b]{algorithm}           }
-  \put( 150,-300){\framebox(100, 50)[c]{}                    }
-
-  \put( 150,-100){\framebox(100, 50)[c]{}                    }
-  \put( 150,- 90){\makebox (100, 30)[t]{min. mean}           }
-  \put( 150,- 90){\makebox (100, 30)[b]{squares}             }
-  \put( 150,-200){\framebox(100, 50)[c]{}                    }
-  \put( 150,-190){\makebox (100, 30)[t]{least}               }
-  \put( 150,-190){\makebox (100, 30)[b]{square}             }
-
-  \put( 300,-100){\framebox(100, 50)[c]{}                    }
-  \put( 300,- 90){\makebox (100, 30)[t]{steepest}            }
-  \put( 300,- 90){\makebox (100, 30)[b]{descent}             }
-  \put( 300,-200){\framebox(100, 50)[c]{}                    }
-  \put( 300,-190){\makebox (100, 30)[t]{least mean}          }
-  \put( 300,-190){\makebox (100, 30)[b]{square}             }
-
-  \put( 450,-100){\framebox(100, 50)[c]{}                    }
-  \put( 450,- 90){\makebox (100, 30)[t]{Newton}              }
-  \put( 450,- 90){\makebox (100, 30)[b]{method}              }
-  \put( 450,-200){\framebox(100, 50)[c]{Kalman}              }
-  \put( 450,-190){\makebox (100, 30)[t]{}                    }
-  \put( 450,-190){\makebox (100, 30)[b]{}                    }
-  \put( 450,-295){\makebox (100, 40)[t]{recursive}           }
-  \put( 450,-300){\framebox(100, 50)[c]{least}               }
-  \put( 450,-295){\makebox (100, 40)[b]{square}             }
-
-  \put( 600,-100){\framebox(100, 50)[c]{wavelets}            }
-  \put( 600,- 90){\makebox (100, 30)[t]{}                    }
-  \put( 600,- 90){\makebox (100, 30)[b]{}                    }
-
-\end{picture}
-\caption{
-   Estimation techniques
-   \label{fig:est-tech}
-   }
-\end{figure}
-
-%--------------------------------------
-\section{Sequential decoding}
-%--------------------------------------
-\begin{figure}[ht]
-\centering%
-\setlength{\unitlength}{0.15mm}
-\begin{picture}(550,320)(-100,0)%
-  \thicklines%
-  \put( -10 , 300 ){\makebox(0,0)[r]{state $00$}}
-  \put( -10 , 200 ){\makebox(0,0)[r]{state $01$}}
-  \put( -10 , 100 ){\makebox(0,0)[r]{state $10$}}
-  \put( -10 ,   0 ){\makebox(0,0)[r]{state $11$}}
-
-  \thicklines
-  \put(   0 ,   0 ){\circle*{10}}
-  \put(   0 , 100 ){\circle*{10}}
-  \put(   0 , 200 ){\circle*{10}}
-  \put(   0 , 300 ){\circle*{10}}
-
-\multiput(0,0)(100,0){5}{
-  %\thicklines
-  \linethickness{1mm}
-  \put        (  0,300){\line( 1,-1){100}} % state0 path1
-  \put        (  0,200){\line( 1,-1){100}} % state1 path1
-  \put        (  0,100){\line( 1, 1){100}} % state2 path1
-  \put        (  0,  0){\line( 1, 1){100}} % state3 path1
-
-  %\thicklines
-  \linethickness{0.1mm}
-  %\put        (  0,300){\line( 1,-3){100}} % state0 path0
-  %\put        (  0,200){\line( 1,-2){100}} % state1 path0
-  %\put        (  0,100){\line( 1, 2){100}} % state2 path0
-  %\put        (  0,  0){\line( 1, 3){100}} % state3 path0
-
-  \qbezier[50](  0,300)(  0,300)(100,  0)  % state0 path0
-  \qbezier[50](  0,200)(  0,200)(100,  0)  % state1 path0
-  \qbezier[50](  0,100)(  0,100)(100,300)  % state2 path0
-  \qbezier[50](  0,  0)(  0,  0)(100,300)  % state3 path0
-
-  \put( 100 ,   0 ){\circle*{10}}
-  \put( 100 , 100 ){\circle*{10}}
-  \put( 100 , 200 ){\circle*{10}}
-  \put( 100 , 300 ){\circle*{10}}
-}
-\end{picture}
-\hspace{1cm}
-\begin{tabular}{cl}
-   $\cdots$ & $y_n=0$ \\
-  ---     & $y_n=1$
-\end{tabular}
-\caption{
-  Viterbi Algorithm trellis
-   \label{fig:est_trellis}
-   }
-\end{figure}
-
-It has been shown that the Viterbi algorithm (trellis) produces
-an optimal estimate in the maximal likelihood (ML) sense.
-A Verterbi trellis is shown in \prefpp{fig:est_trellis}.
-
 
 
 
