--- a/common/math/graphics/estimation_techniques.tex
+++ b/common/math/graphics/estimation_techniques.tex
@@ -2,9 +2,9 @@
 % Daniel J. Greenhoe
 % LaTeX File
 % nominal xunit = 20mm
-% nominal yunit = 20mm
+% nominal yunit = 15mm
 %============================================================================
-\begin{pspicture}(-5,-4.3)(4,0.2)%
+\begin{pspicture}(-5,-4.45)(4,0.45)%
    %------------------------------------
    % parameters
    %------------------------------------
@@ -24,8 +24,8 @@
    %------------------------------------
    % top
    %------------------------------------
-   \rput(0,0){\rnode{tech}{\psframebox{$\begin{array}{N}
-     \opb{Estimation Techniques}
+   \rput(0,0){\rnode{tech}{\psframebox{$\begin{array}{N}%
+     \opb{Estimation Techniques}%
    \end{array}$}}}%
    %------------------------------------
    % sequential decoding
@@ -92,7 +92,7 @@
    \uput[180](normmin){\begin{tabular}{@{}r@{}}norm\\minimization\end{tabular}}%
    \uput[ 45](gradsearch){\begin{tabular}{@{}l}gradient\\search\end{tabular}}%
    \uput[135](gradonly){$\grad_\vp$ only}%
-   \uput[ 45](gradgrad){use $\grad_\vp,\grad^2_\vp$}
+   \uput[ 45](gradgrad){use $\grad_\vp,\grad^2_\vp$}%
    %------------------------------------
    % guides (comment out before publishing)
    %------------------------------------
