--- a/common/bayesnets.tex
+++ b/common/bayesnets.tex
@@ -6,6 +6,65 @@
 \chapter{Bayesian Networks}
 \label{chp:bayesnets}
 %======================================
+%======================================
+\section{Sequential decoding}
+%======================================
+\begin{figure}
+\centering%
+\setlength{\unitlength}{0.15mm}
+\begin{picture}(550,320)(-100,0)%
+  \thicklines%
+  \put( -10 , 300 ){\makebox(0,0)[r]{state $00$}}
+  \put( -10 , 200 ){\makebox(0,0)[r]{state $01$}}
+  \put( -10 , 100 ){\makebox(0,0)[r]{state $10$}}
+  \put( -10 ,   0 ){\makebox(0,0)[r]{state $11$}}
+
+  \thicklines
+  \put(   0 ,   0 ){\circle*{10}}
+  \put(   0 , 100 ){\circle*{10}}
+  \put(   0 , 200 ){\circle*{10}}
+  \put(   0 , 300 ){\circle*{10}}
+
+\multiput(0,0)(100,0){5}{
+  %\thicklines
+  \linethickness{1mm}
+  \put        (  0,300){\line( 1,-1){100}} % state0 path1
+  \put        (  0,200){\line( 1,-1){100}} % state1 path1
+  \put        (  0,100){\line( 1, 1){100}} % state2 path1
+  \put        (  0,  0){\line( 1, 1){100}} % state3 path1
+
+  %\thicklines
+  \linethickness{0.1mm}
+  %\put        (  0,300){\line( 1,-3){100}} % state0 path0
+  %\put        (  0,200){\line( 1,-2){100}} % state1 path0
+  %\put        (  0,100){\line( 1, 2){100}} % state2 path0
+  %\put        (  0,  0){\line( 1, 3){100}} % state3 path0
+
+  \qbezier[50](  0,300)(  0,300)(100,  0)  % state0 path0
+  \qbezier[50](  0,200)(  0,200)(100,  0)  % state1 path0
+  \qbezier[50](  0,100)(  0,100)(100,300)  % state2 path0
+  \qbezier[50](  0,  0)(  0,  0)(100,300)  % state3 path0
+
+  \put( 100 ,   0 ){\circle*{10}}
+  \put( 100 , 100 ){\circle*{10}}
+  \put( 100 , 200 ){\circle*{10}}
+  \put( 100 , 300 ){\circle*{10}}
+}
+\end{picture}
+\hspace{1cm}
+\begin{tabular}{cl}
+   $\cdots$ & $y_n=0$ \\
+  ---     & $y_n=1$
+\end{tabular}
+\caption{
+  Viterbi Algorithm trellis
+   \label{fig:est_trellis}
+   }
+\end{figure}
+
+It has been shown that the Viterbi algorithm (trellis) produces
+an optimal estimate in the maximal likelihood (ML) sense.
+A Verterbi trellis is shown in \prefpp{fig:est_trellis}.
 
 %======================================
 \section{References}
@@ -47,3 +106,5 @@
      \\Appears to be self-published, 46 pages
 
 \end{enumerate}
+
+
