--- a/common/sty/dan.sty
+++ b/common/sty/dan.sty
@@ -277,7 +277,7 @@
 % book citations
 %---------------------------------------
 \newcommand{\fullcite}{\cite}
-\newcommand{\citefull}[1]{\citebullet\;\fullcite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
+\newcommand{\citefull}[1]{\citebullet\;\fullcite{#1}\index[xref]{{\cite{#1}}}}
 \newcommand{\citer}   [1]{\citebullet\;\cite{#1}\index[xref]{{\cite{#1}}}}          % citation table entry with only reference (no page number)
 \newcommand{\citerp}  [2]{\citebullet\;\cite{#1}, page~#2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
 \newcommand{\citerps} [2]{\citebullet\;\cite{#1}, pages #2\index[xref]{{\cite{#1}}}} % citation table entry with ref and one page
