model-based presentation in estimate.tex

--- a/common/bayesnets.tex
+++ b/common/bayesnets.tex
@@ -3,7 +3,8 @@
 % LaTeX file
 %============================================================================
 %======================================
-\chapter{Bayesian Networks}
+\chapter[Bayesian Network Algorithms]
+        {Bayesian Network Algorithms when Joint-pdf Model is Known}
 \label{chp:bayesnets}
 %======================================
 %======================================
@@ -105,6 +106,7 @@ A Verterbi trellis is shown in \prefpp{fig:est_trellis}.
      \\\url{https://www.amazon.com/dp/1978304870}
      \\Appears to be self-published, 46 pages
 
+  \item \citeP{fano1963}
 \end{enumerate}
 
 
