--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -172,6 +172,9 @@
   publisher    = {CRC Press},
   series       = {Electronic Engineering Systems Series},
   editor       = {J. K. Fidler},
+  url          = {http://books.google.com/books?vid=isbn0849386098},
+  urlw         = {http://www.worldcat.org/isbn/0849386098},
+  urla         = {http://www.amazon.com/dp/0849386098},
   }
 
 @book{greenhoe_abcdc,
