--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -595,6 +595,20 @@
   institution  = {Research Laboratory of Electronics, Massachusetts Institute of Technology},
   }
 
+@article{fano1963,
+  title        = {A heuristic discussion of probabilistic decoding},
+  author       = {Robert M. Fano},
+  journal      = {IEEE Transactions on Information Theory},
+  volume       = {9},
+  number       = {2},
+  month        = {April},
+  year         = {1963},
+  pages        = {64--74},
+  publisher    = {IEEE Press Piscataway},
+  doi          = {10.1109/TIT.1963.1057827},
+  url          = {https://doi.org/10.1109/TIT.1963.1057827},
+  }
+
 @book{feller1971,
   author       = {William Feller},
   title        = {An Introduction to Probability Theory and its Applications Volume II},
@@ -946,13 +960,15 @@
   url          = {https://www.researchgate.net/publication/283994172},
   }
 
-@book{mik,
+@book{manolakis2000,
   isbn         = {0070400512},
   author       = {Dimitris G. Manolakis and Vinay K. Ingle and Stephen M. Kogon},
   title        = {Statistical and Adaptive Signal Processing},
   publisher    = {Mc-Graw Hill},
   address      = {Boston},
   year         = {2000},
+  urlg         = {http://books.google.com/books?vid=ISBN0070400512},
+  url          = {http://www.amazon.com/dp/0070400512},
   }
 
 @book{manolakis2005,
