--- a/common/matched_filter.tex
+++ b/common/matched_filter.tex
@@ -3,7 +3,7 @@
 % Daniel J. Greenhoe
 %============================================================================
 %=======================================
-\chapter{Matched Filter Algorithm}
+\section{Matched Filter Algorithm}
 %=======================================
 %======================================
 %\paragraph{Detection methods.}
