--- a/common/math/graphics/estimation_techniques.tex
+++ b/common/math/graphics/estimation_techniques.tex
@@ -31,7 +31,8 @@
    % sequential decoding
    %------------------------------------
    \rput(-3,-2){\rnode{codetree}{\psframebox{\parbox{30mm}{\centering%
-     \opb{code tree}%
+     \opb{Bayesian Networks}%
+    %\opb{code tree}%
      }}}}%
    \rput(-4.2,-4){\rnode{trellis}{\psframebox{\parbox{20mm}{\centering%
      \opb{Viterbi Algorithm}%
