--- a/common/operator.tex
+++ b/common/operator.tex
@@ -1972,8 +1972,6 @@ $\norm{\vx}\eqd\sqrt{\inprod{\vx}{\vx}}$.
   }
 \label{def:op_normal}
 \index{operator!normal}      \index{normal operator}
-\index{operator!isometric}   \index{isometric operator}
-\index{operator!unitary}     \index{unitary operator}
 %---------------------------------------
 Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linear spaces $\spX$ and $\spY$.
 Let $\opNa$ be the adjoint of an operator $\opN\in\clBxy$.
@@ -2627,6 +2625,12 @@ and $\oppI(\opU)$ the \structe{image set} of $\opU$.\ifdochas{relation}{\footnot
     and by \prefp{thm:isometric_prop}.
 \end{enumerate}
 \end{proof}
+
+%---------------------------------------
+\begin{example}
+\footnote{\citer{gelfand1963}}
+%---------------------------------------
+\end{example}
 
 %%---------------------------------------
 %\begin{theorem}
