--- a/common/projection_statistics.tex
+++ b/common/projection_statistics.tex
@@ -3,7 +3,8 @@
 % Daniel J. Greenhoe
 %============================================================================
 %=======================================
-\chapter{Projection Statistic Algorithms}  % for Additive Noise Models
+\chapter[Projection Statistic Algorithms]
+        {Projection Statistic Algorithms for Additive Noise Models}
 %=======================================
 %=======================================
 \section{Projection Statistics}
@@ -1219,8 +1220,9 @@ if and only if
 %  }
 %\vfill
 
-
-
+%======================================
+\input{../common/matched_filter.tex}
+%======================================
 
 %======================================
 \section{Colored noise}
