--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -2457,6 +2457,18 @@
   urla         = {http://www.amazon.com/dp/0821851756},
   }
 
+@book{gelfand1963,
+  authorx      = {Israel M. Gelfand and R. A. Minlos and Z. .Ya. Shapiro},
+  title        = {Representations of the rotation and Lorentz groups and their applications},
+  publisher    = {Pergamon Press book},
+  author       = {Izrail' Moiseevich Gel'fand},
+  translator   = {H. K. Farahat},
+  language     = {English},
+  year         = {1963},
+  pages        = {366},
+  note         = {2018 Dover edition available},
+  }
+
 @inbook{gelfand1964,
   author       = {Israel M. Gelfand and Mark A. Naimark},
   title        = {Normed Rings with an Involution and their Representations},
