--- a/common/estimate.tex
+++ b/common/estimate.tex
@@ -9,11 +9,8 @@
 \label{chp:est}
 %======================================
 %======================================
-\section{Estimation types}
+\section{Model-based Estimation}
 %======================================
-%--------------------------------------
-\paragraph{Estimation model.}
-%--------------------------------------
 Starting in the 1980s and continuing into 2019, James V. Candy has proposed 
 the \structd{model-based approach}{\footnotemark} 
 to estimation. This approach partitions the task of estimation into three parts:
@@ -46,9 +43,9 @@ to estimation. This approach partitions the task of estimation into three parts:
         This function may also be called a \fnctd{cost function}. 
 \end{enumerate}
 
-%--------------------------------------
-\paragraph{Estimation types.}
-%--------------------------------------
+%=======================================
+\subsection{Estimation models}
+%=======================================
 Let $\rvx(t;\theta)$ be a waveform with parameter $\theta$.
 There are three basic types of estimation of $\rvx$:
 
@@ -72,23 +69,16 @@ There are three basic types of estimation of $\rvx$:
       \end{liste}
 \end{enume}
 
-%--------------------------------------
-\paragraph{Estimation criterion.}
-%--------------------------------------
-Optimization requires a criterion against which the quality of an
-estimate is measured.\footnote{\citergc{srv}{chapters 3, 5}{013125295X}.}
-The most demanding and general criterion is the \prope{Bayesian} criterion.
-The Bayesian criterion requires knowledge of the probability
-distribution functions and the definition of a \fncte{cost function}.
-Other criterion are special cases of the Bayesian criterion
-such that the cost function is defined in a special way,
-no cost function is defined, and/or the distribution is not known
-\xref{fig:est-tech}.
 
-%--------------------------------------
-\paragraph{Estimation techniques.}
+%=======================================
+\subsection{Estimation algorithms}
 \label{ref:sec:parameter-est}
-%--------------------------------------
+%=======================================
+\begin{figure}
+\centering%
+\includegraphics{graphics/estimation_techniques.pdf}
+\caption{Estimation Algorithms\label{fig:est-tech}}
+\end{figure}
 Estimation techniques can be classified into
 five groups \xref{fig:est-tech}:\footnote{%
   \citerpgc{nelles2001}{26}{3540673695}{``Fig 2.2 Overview of linear and nonlinear optimization techniques"},
@@ -114,7 +104,7 @@ While this restriction to linear operations often simplifies calculations,
 it often yields an estimate that is not optimal in the ML sense.
 
 %=======================================
-\section{Estimation criterion}
+\subsection{Estimation criterion function}
 \label{sec:est_criterion}
 %=======================================
 \begin{figure}
@@ -125,6 +115,16 @@ it often yields an estimate that is not optimal in the ML sense.
    \label{fig:est-criterion}
    }
 \end{figure}
+
+Optimization requires a criterion against which the quality of an
+estimate is measured.\footnote{\citergc{srv}{chapters 3, 5}{013125295X}.}
+The most demanding and general criterion is the \prope{Bayesian} criterion.
+The Bayesian criterion requires knowledge of the probability
+distribution functions and the definition of a \fncte{cost function}.
+Other criterion are special cases of the Bayesian criterion
+such that the cost function is defined in a special way,
+no cost function is defined, and/or the distribution is not known
+\xref{fig:est-tech}.
 
 %--------------------------------------
 \begin{definition}
@@ -202,6 +202,7 @@ Let $\rvx(t;\theta)$ be a random process with unknown parameter $\theta$.
 \begin{definition}
 \footnote{
   \citerpgc{silverman1986}{35}{9780412246203}{\textsection ``1.3.2 Measures of discrepancy\ldots"},
+  \citerpgc{clarkson1993}{50}{0849386098}{``c) Mean-Squared Error"},
   \citergc{bendat2010}{1118210824}{\textsection ``1.4.3 Error Analysis Criteria"},
   \citerp{bendat1966}{183}{\textsection ``5.3 Statistical Errors for Parameter Estimates"}
   }
@@ -335,7 +336,7 @@ and $\nre(\estT)$    the \fncte{normalized rms error} \xref{def:nre} of an estim
 \footnote{
   \citerpg{choi1978}{76}{9780135016190},
   \citerpgc{shao2003}{161}{9780387953823}{\textsection ``The UMVUE"},
-  \citerpgc{bolstad2007}{164}{9780470141151}{\textsection ``Minimum Variance Unbiased Estimator"},
+  \citerpgc{bolstad2007}{164}{9780470141151}{\textsection ``Minimum Variance Unbiased Estimator"}
   }
 %--------------------------------------
 \defboxt{
@@ -347,15 +348,3 @@ and $\nre(\estT)$    the \fncte{normalized rms error} \xref{def:nre} of an estim
   \end{array}$
   }
 \end{definition}
-
-%======================================
-%\section{Estimation techniques}
-%======================================
-\begin{figure}
-\centering%
-\includegraphics{graphics/estimation_techniques.pdf}
-\caption{Estimation Algorithms\label{fig:est-tech}}
-\end{figure}
-
-
-
