correlation estimation methods

--- a/common/correlation_estimation.tex
+++ b/common/correlation_estimation.tex
@@ -5,6 +5,9 @@
 %=======================================
 \chapter{Correlation Estimation}
 %=======================================
+%=======================================
+\section{Time series method}
+%=======================================
 
 %---------------------------------------
 \begin{definition}
@@ -23,6 +26,7 @@
 \begin{theorem}
 \footnote{
   \citer{jenkins1968},
+  \citerppgc{clarkson1993}{54}{56}{0849386098}{\textsection ``2.6.2 Estimation of Moments --- Time Averages"},
   \citerpgc{vaseghi2000}{272}{0471626929}{\textsection ``9.3.3 Energy-Spectral Density and Power-Spectral Density"}
   }
 %---------------------------------------
@@ -31,4 +35,18 @@
   \var\brs{\estRxx(m)} &=& \frac{1}{\xN} \sum_{n\in\Z} \brs{\Rxx^2(n) + \Rxx(n-m)\Rxx(n+m)} & (\prope{consistent})
 \end{array}}
 \end{theorem}
+
+%=======================================
+\section{Spectral methods}
+%=======================================
+Here are two methods for estimating correlation using spectral methods:
+\begin{enumerate}
+  \item Calculate the estimate $\estH(\omega)$ \xref{chp:systemid} of the true system model $\fH(\omega)$
+        and then calculate the \ope{Inverse Fourier Transform} of $\estH(\omega)$.
+  \item Calculate an \ope{AR}, \ope{MA}, or \ope{ARMA} estimate of the true system model $\fH(z)$ and then 
+        compute the \ope{Inverse Z-Transform} of the estimate.\footnotemark
+\end{enumerate}
+\footnotetext{
+  \citerppgc{clarkson1993}{56}{59}{0849386098}{\textsection ``Appendix 2A --- Calculating the Correlation via Contour Integration"}
+  }
 
