--- a/common/harTrig.tex
+++ b/common/harTrig.tex
@@ -28,8 +28,8 @@
 Let $\opair{\F}{\invo}$ be a $\invo$-algebra a (\structe{star algebra}).
 \defbox{
   \begin{array}{MLcLC}
-    The \hid{real part}      of $x$ is defined as & \hxs{\Re} x &\eqd& \frac{1}{2  }\Big( x+ x^\invo \Big) & \forall x\in\F \\
-    The \hid{imaginary part} of $x$ is defined as & \hxs{\Im} x &\eqd& \frac{1}{2i }\Big( x- x^\invo \Big) & \forall x\in\F
+    The \structd{real part}      of $x$ is defined as & \hxs{\Re} x &\eqd& \frac{1}{2  }\Big( x+ x^\invo \Big) & \forall x\in\F \\
+    The \structd{imaginary part} of $x$ is defined as & \hxs{\Im} x &\eqd& \frac{1}{2i }\Big( x- x^\invo \Big) & \forall x\in\F
   \end{array}
   }
 \end{definition}
