--- a/common/randseq_eigen.tex
+++ b/common/randseq_eigen.tex
@@ -325,6 +325,10 @@ The eigen-vectors (and hence a quasi-basis) for $\opR$ can be found using a
 
 %---------------------------------------
 \begin{proposition}
+\footnote{
+  See 
+  \citerpgc{clarkson1993}{131}{0849386098}{\textsection ``Appendix 3A --- Positive Semi-Definite Form of the Autocorrelation Matrix"}
+  }
 %---------------------------------------
 \propboxt{
   The \ope{auto-correlation matrix} $\opR$ is \propb{Toeplitz}.
