--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -671,15 +671,30 @@
   }
 
 @book{vaseghi2000,
-  isbn         = {0471626929},
-  author       = {Saeed V. Vaseghi},
+  isbn         = {9780471626923},
+  isbn10       = {0471626929},
   title        = {Advanced Digital Signal Processing and Noise Reduction},
+  author       = {Saeed V. Vaseghi},
   edition      = {2},
-  year         = {2000},
   publisher    = {John Wiley \& Sons},
-  url          = {http://books.google.com/books?vid=ISBN0471626929},
+  year         = {2000},
+  urlg         = {http://books.google.com/books?vid=ISBN0471626929},
   urlw         = {http://www.worldcat.org/isbn/0471626929},
-  urla         = {http://www.amazon.com/dp/0471626929},
+  url          = {http://www.amazon.com/dp/0471626929},
+  }
+
+@book{vaseghi2008,
+  isbn         = {9780470740163},
+  isbn10       = {0470740167},
+  title        = {Advanced Digital Signal Processing and Noise Reduction},
+  author       = {Saeed V. Vaseghi},
+  edition      = {4},
+  publisher    = {John Wiley \& Sons},
+  year         = {2008},
+  pages        = {544},
+  url          = {http://books.google.com/books?vid=ISBN9780470740163},
+  urlw         = {http://www.worldcat.org/isbn/9780470740163},
+  urla         = {http://www.amazon.com/dp/9780470740163},
   }
 
 @article{weickert1999,
