rotation and reflection unitary operator examples

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -2458,7 +2458,6 @@
   }
 
 @book{gelfand1963,
-  authorx      = {Israel M. Gelfand and R. A. Minlos and Z. .Ya. Shapiro},
   title        = {Representations of the rotation and Lorentz groups and their applications},
   publisher    = {Pergamon Press book},
   author       = {Izrail' Moiseevich Gel'fand},
@@ -2467,6 +2466,20 @@
   year         = {1963},
   pages        = {366},
   note         = {2018 Dover edition available},
+  }
+
+@book{gelfand2018,
+  isbn         = {9780486823850},
+  isbn10       = {0486823857},
+  author       = {Israel M. Gelfand and R. A. Minlos and Z. .Ya. Shapiro},
+  title        = {Representations of the rotation and Lorentz groups and their applications},
+  publisher    = {Courier Dover Publications},
+  author       = {Izrail' Moiseevich Gel'fand},
+  edition      = {reprint},
+  translator   = {H. K. Farahat},
+  language     = {English},
+  year         = {2018},
+  pages        = {384},
   }
 
 @inbook{gelfand1964,
