--- a/common/operator.tex
+++ b/common/operator.tex
@@ -70,7 +70,7 @@ Let $\setX$ be a set,
 let $+$ be an \structe{operator} \xref{def:operator} in $\clF{\setX^2}{\setX}$, 
 and let $\otimes$ be an operator in $\clF{\F\times\setX}{\setX}$.
 \defboxp{
-  The structure $\spO\eqd\linearspaceX$ is a \hid{linear space} over $\fieldF$ if
+  The structure $\spO\eqd\linearspaceX$ is a \structd{linear space} over $\fieldF$ if
   %\\\indentx$\ds\begin{array}{l rcl @{\quad}C @{\quad}D@{}r@{}}
   \\\indentx$\ds\begin{array}{>{\scriptstyle}r rcl @{\quad}C @{\quad}D@{}r@{}}
     \cline{7-7}
@@ -138,7 +138,7 @@ and let $\otimes$ be an operator in $\clF{\F\times\setX}{\setX}$.
     %2. & There exists a linear space $\spX\eqd\linearspaceX$ & and\\
     %3. & There exists a linear space $\spY\eqd\linearspaceY$. &\\
   %The set of all operators from $\spX$ to $\spY$ is denoted $\hxs{\clOxy}$.
-  %\mc{3}{M}{If $\spY=\F$, then $\opA$ is a \hid{functional}.}
+  %\mc{3}{M}{If $\spY=\F$, then $\opA$ is a \fnctd{functional}.}
   }
 %\footnotetext{\begin{tabular}[t]{ll}
 %  \structe{function}:     & \prefp{def:rel_f}\\
@@ -146,7 +146,7 @@ and let $\otimes$ be an operator in $\clF{\F\times\setX}{\setX}$.
 %\end{tabular}}
 \end{definition}
 
-Two operators $\opA$ and $\opB$ in $\clOxy$ are \hid{equal} if 
+Two operators $\opA$ and $\opB$ in $\clOxy$ are \propd{equal} if 
 $\ds \opA\vx=\opB\vx$ for all $\vx\in\spX$\ifsxref{relation}{def:f=g}.
 The inverse relation\ifsxref{relation}{def:rel_inverse} of an operator $\opA$ in $\clOxy$
 always exists as a \hie{relation} in $\clR{\spX}{\spY}$\ifsxref{relation}{def:relation},
@@ -599,7 +599,7 @@ Let $\clLxy$ be the space of linear operators over normed linear spaces $\spX$ a
   }
 \defbox{\indxs{\normopn}
   \begin{array}{M}
-  The \hid{operator norm} $\normopn$ is defined as
+  The \fnctd{operator norm} $\normopn$ is defined as
     \\\qquad$\ds
       \normop{\opA} \eqd \sup_{\vx\in\spX}\set{\norm{\opA\vx}}{\norm{\vx} \le 1}
       \qquad\forall\opA\in\clLxy
@@ -647,7 +647,7 @@ $\spX\eqd\normspaceX$ and $\spY\eqd\normspaceY$.
     & \forall \opA\in\clLxy
     & (\prope{subadditive}).
   \\
-  \mc{7}{M}{Moreover, $\opair{\clLxy}{\normopn}$ is a \hid{normed linear space}.}
+  \mc{7}{M}{Moreover, $\opair{\clLxy}{\normopn}$ is a \structd{normed linear space}.}
 \end{array}}
 \end{proposition}
 \begin{proof}
@@ -881,9 +881,9 @@ $\spX$ and $\spY$.
 %---------------------------------------
 Let $\opair{\clLxy}{\normopn}$ be a normed space of linear operators.
 \defbox{\begin{array}{M}
-  An operator $\opB$ is \hid{bounded} if $\normop{\opB} < \infty$.
+  An operator $\opB$ is \propd{bounded} if $\normop{\opB} < \infty$.
   \\
-  The quantity $\clBxy$ is the set of all \hid{bounded linear operators} on $\opair{\spX}{\spY}$ such that
+  The quantity $\clBxy$ is the set of all \structd{bounded linear operators} on $\opair{\spX}{\spY}$ such that
     \\\qquad$\ds\clBxy  \eqd \set{\opL\in\clLxy}{\normop{\opL}<\infty}$.
 \end{array}}
 \end{definition}
@@ -904,10 +904,10 @@ Let $\opair{\clLxy}{\normopn}$ be a normed space of linear operators.
 %Let $\opair{\clLxy}{\normopn}$ be the normed space of linear operators over normed linear spaces
 %$\spX$ and $\spY$.
 %\defbox{\begin{array}{M}
-%  An operator $\opL$ is \hid{continuous} if\quad
+%  An operator $\opL$ is \propd{continuous} if\quad
 %    for all $\epsilon>0$ there exists $\delta>0$ such that
 %    \\\qquad$\ds\norm{\vx-\vy}<\delta \qquad\implies\qquad \norm{\opL\vx - \opL\vy} < \epsilon.$\\
-%  %The set $\clCxy$ is defined to be the set of all \hid{continuous operators} on $\opair{\spX}{\spY}$ such that
+%  %The set $\clCxy$ is defined to be the set of all \structd{continuous operators} on $\opair{\spX}{\spY}$ such that
 %  %  \\\qquad$\ds\hxs{\clCxy} \eqd \set{\opC\in\clOxy}{\text{$\opC$ is continuous}}.$
 %\end{array}}
 %\end{definition}
@@ -1281,9 +1281,9 @@ Let $\opA^0\eqd \opI$.
 %    $\opNa$, $\opMa$, and $\opUa$, respectively.
 %%Let $\spI$ be the identity operator.
 %\defbox{\begin{array}{M lclC}
-%  An operator $\opM$ is \hid{isometric} if & \norm{\opM\vx-\opM\vy} &=& \norm{\vx-\vy} & \forall \vx,\vy\in\setX.\\
-%  An operator $\opU$ is \hid{unitary}   if & \norm{\opU\vx}         &=& \norm{\vx}     & \forall \vx\in\setX.\\
-%  An operator $\opN$ is \hid{normal}    if & \norm{\opNa\vx}        &=& \norm{\opN\vx} & \forall \vx\in\setX.
+%  An operator $\opM$ is \propd{isometric} if & \norm{\opM\vx-\opM\vy} &=& \norm{\vx-\vy} & \forall \vx,\vy\in\setX.\\
+%  An operator $\opU$ is \propd{unitary}   if & \norm{\opU\vx}         &=& \norm{\vx}     & \forall \vx\in\setX.\\
+%  An operator $\opN$ is \propd{normal}    if & \norm{\opNa\vx}        &=& \norm{\opN\vx} & \forall \vx\in\setX.
 %\end{array}}
 %\end{definition}
 %\addtocounter{footnote}{-1}
@@ -2140,7 +2140,7 @@ if it is an \structe{isometry}. % \xrefP{def:isometry}.
 %--------------------------------------
 Let $\normspaceX$ and $\normspaceY$ be \structe{normed linear spaces} \xref{def:norm}.
 \defbox{\begin{array}{M}
-  An operator $\opM\in\clLxy$ is \hid{isometric} if
+  An operator $\opM\in\clLxy$ is \propd{isometric} if
   \\\qquad$\ds\norm{\opM\vx}= \norm{\vx} \qquad\scy \forall \vx\in\setX$.
 \end{array}}
 \end{definition}
@@ -2429,7 +2429,7 @@ Let $\clBxy $ be the space of \structe{bounded linear operators} on normed linea
 Let $\opU$ be a bounded linear operator in $\clBxy$,
 and $\spI$ the identity operator in $\clBxx$.
 \defbox{\begin{array}{M rcl}
-  The operator $\opU$ is \hid{unitary} if & \opUa\opU &=& \opU\opUa = \opI .
+  The operator $\opU$ is \propd{unitary} if & \opUa\opU &=& \opU\opUa = \opI .
 \end{array}}
 \end{definition}
 
@@ -2457,9 +2457,11 @@ Let $\opU$ and $\opV$ be \structe{bounded linear operators} in $\clBxy$.
     \\&= \opU\brp{\opV\opVa}\opUa
       && \text{by \prop{associative} property\ifsxref{relation}{thm:op_associative}}
     \\&= \opU\opI\opUa
-      && \text{by definition of \prop{unitary} operators---\prefp{def:op_unitary}}
+      && \text{by definition of \prope{unitary} operators}
+      && \text{\xref{def:op_unitary}}
     \\&= \opI
-      && \text{by definition of \prop{unitary} operators---\prefp{def:op_unitary}}
+      && \text{by definition of \prope{unitary} operators}
+      && \text{\xref{def:op_unitary}}
     \\ \\
     \brp{\opU\opV}^\ast\brp{\opU\opV}
       &= \brp{\opVa\opUa}\brp{\opU\opV}
@@ -2467,9 +2469,11 @@ Let $\opU$ and $\opV$ be \structe{bounded linear operators} in $\clBxy$.
     \\&= \opVa\brp{\opUa\opU}\opV
       && \text{by \prop{associative} property\ifsxref{relation}{thm:op_associative}}
     \\&= \opVa\opI\opV
-      && \text{by definition of \prop{unitary} operators---\prefp{def:op_unitary}}
+      && \text{by definition of \prope{unitary} operators}
+      && \text{\xref{def:op_unitary}}
     \\&= \opI
-      && \text{by definition of \prop{unitary} operators---\prefp{def:op_unitary}}
+      && \text{by definition of \prope{unitary} operators}
+      && \text{\xref{def:op_unitary}}
   \end{align*}
 \end{proof}
 
@@ -2485,7 +2489,7 @@ Let $\opU$ and $\opV$ be \structe{bounded linear operators} in $\clBxy$.
 Let $\clBhh $ be the space of \structe{bounded linear operators} on a \structe{Hilbert space} $\spH$.
 Let $\oppI(\opU)$ be the \structe{image set}\ifsxref{relation}{def:rel_image} of $\opU$.
 \thmbox{\begin{array}{>{\qquad}FlDlDc}
-  \mc{6}{M}{If $\opU$ is a \structb{bounded linear operator} ($\opU\in\clBhh$), then the following conditions are {\bf equivalent}:}
+  \mc{6}{M}{If $\opU$ is a \structb{bounded linear operator} ($\opU\in\clBhh$), then the following conditions are \propb{equivalent}:}
   \\
      1. & \opU\opUa=\opUa\opU=\opI
         &
@@ -2628,8 +2632,26 @@ and $\oppI(\opU)$ the \structe{image set} of $\opU$.\ifdochas{relation}{\footnot
 
 %---------------------------------------
 \begin{example}
-\footnote{\citer{gelfand1963}}
+\footnote{
+  \citerp{gelfand1963}{4},
+  \citerpg{gelfand2018}{4}{9780486823850}
+  }
 %---------------------------------------
+Let $\opA$ and $\opB$ be matrix operators.
+\exbox{\mcom{\begin{array}{N|N}
+  $\opA\eqd\brs{\begin{array}{rrc}
+      \cos\phi     & -\sin\phi    & 0
+    \\\sin\phi     &  \cos\phi    & 0
+    \\\mc{1}{c}{0} & \mc{1}{c}{0} & 1
+  \end{array}}$
+  & 
+  $\opB\eqd\brs{\begin{array}{rrr}
+      -1 &  0 &  0
+    \\ 0 & -1 &  0
+    \\ 0 &  0 & -1
+  \end{array}}$
+  \\$\opA$ is a \ope{rotation operator}. & $\opB$ is a \ope{reflection operator}.
+\end{array}}{\normalsize Both $\opA$ and $\opB$ are \propb{unitary}.}}
 \end{example}
 
 %%---------------------------------------
@@ -2876,25 +2898,22 @@ Let the rotation matrix $\opR_\theta:\R^2\to\R^2$ be defined as
 \end{align*}
 \end{proof}
 
-
-\ifexclude{wsd}{
-
 %=======================================
 \section{Operator order}
 %=======================================
 %---------------------------------------
 \begin{definition}
-\label{def:op_ge}
 \footnote{
   \citerpgc{michel1993}{429}{048667598X}{Definition 7.4.12}
   %\citerpg{ab2006}{2}{1402050070}
   %\citerp{pedersen2000}{87}
   }
+\label{def:op_ge}
 \index{operator!positive}
 %---------------------------------------
 Let $\opP\in\clOxy$ be an operator.
 \defbox{\begin{array}{M}
-  $\opP$ is \hid{positive} if \qquad $\inprod{\opP\vx}{\vx} \ge 0$ $\forall\vx\in\spX$.
+  $\opP$ is \propd{positive} if \qquad $\inprod{\opP\vx}{\vx} \ge 0$ $\forall\vx\in\spX$.
   \\
   This condition is denoted \qquad$\opP\ge0$.
 \end{array}}
@@ -2978,93 +2997,6 @@ Let $\opA,\opB\in\clBxy$ be \prope{bounded} operators.
   \\\indentx$\ds\opA-\opB\ge 0$ (``$(\opA-\opB)$ is positive")
   }
 \end{definition}
-} % end wsd exclude
-
-
-%\begin{minipage}{5\tw/16}
-%  \color{figcolor}
-%  \begin{center}
-%  \begin{fsL}
-%  \setlength{\unitlength}{\textwidth/700}
-%  \begin{picture}(600,500)(-300,-200)
-%    %{\color{graphpaper}\graphpaper[100](-300,-200)(600,500)}
-%    \thinlines
-%    \put(-200,   0){\line( 1, 1){120} }
-%    \put(   0, 200){\line(-1,-1){ 40} }
-%    \put(-100,   0){\line(-1, 1){ 50} }
-%    \put(   0,   0){\line(-1, 1){100} }
-%    \put( 200,   0){\line(-1, 1){200} }
-%
-%    \put(-200,   0){\line( 1,-1){200} }
-%    \put(-100,   0){\line( 1,-2){100} }
-%    \put(   0,   0){\line( 0,-1){200} }
-%    \put( 200,   0){\line(-1,-1){200} }
-%
-%    \put(   0, 200){\circle*{15}}  %maximum element
-%    \put(   0,-200){\circle*{15}}  %minimum element
-%
-%    \put(-150,  50){\circle*{15}}
-%    \put(-100, 100){\circle*{15}}
-%
-%    \put(-200, 0){\circle*{15}}
-%    \put(-100, 0){\circle*{15}}
-%    \put(   0, 0){\circle*{15}}
-%    \put( 100, 0){$\cdots$}
-%    \put( 200, 0){\circle*{15}}
-%
-%    \put(   0, 210){\makebox(0,0)[b] {$\spX$}}
-%    \put(-110, 100){\makebox(0,0)[r] {$\spV_3$}}
-%    \put(-160,  50){\makebox(0,0)[r] {$\spV_2$}}
-%    \put(-210,   0){\makebox(0,0)[r] {$\spV_1$}}
-%    \put(-110,   0){\makebox(0,0)[r] {$\spW_1$}}
-%    \put(  10,   0){\makebox(0,0)[l] {$\spW_2$}}
-%    \put( 210,   0){\makebox(0,0)[l] {$\spW_{n-1}$}}
-%    \put(  . ,-210){\makebox(0,0)[t] {$0$}}
-%
-%    \put( -50, 15){\makebox(0,0)[c] {$\ddots$}}
-%    {\color{red}
-%      \put(-300,- 50){\dashbox{10}(600,80){}}
-%      \put(-300, 260){\makebox(0,0)[bl] {scaling subspaces}}
-%      \put( 300, 110){\makebox(0,0)[br] {wavelet subspaces}}
-%      \put( 200, 100){\vector(0,-1){70}}
-%      \put(-250, 250){\vector(1,-1){70}}
-%      \thicklines
-%      \qbezier[30](-300,  50)(-175, 175)( -50, 300)
-%      \qbezier[30](-200, -50)( -75,  75)(  50, 200)
-%      \qbezier[15](-200,-50)(-250,0)(-300,50)
-%      \qbezier[15](  50,200)(0,250)(-50,300)
-%    }
-%  \end{picture}
-%  \end{fsL}
-%  \end{center}
-%\end{minipage}
-%\begin{minipage}{11\tw/16}
-%%---------------------------------------
-%\begin{example}
-%%---------------------------------------
-%A \hie{wavelet transform} partitions a space $\spX$ into a pair of sequences of subspaces:
-%\begin{liste}
-%  \item \hie{scaling subspace sequence} $\seqn{\spV_n}$
-%  \item \hie{wavelet subspace sequence} $\seqn{\spW_n}$
-%\end{liste}
-%Let $\opP_n$ be the projection operator onto subspace $\spV_n$ and
-%let $\opQ_n$ be the projection operator onto subspace $\spW_n$.
-%Then
-%\begin{liste}
-%  \item $\opP_n\ge\opP_m$ for $n\ge m$
-%  \item $\opP_{n+1} \ge \opQ_n$
-%  \item $\opQ_n$ is \hie{not comparable} to $\opQ_m$ for $n\ne m$
-%\end{liste}
-%Note that the tuple
-%$(\setn{\seq{\opP_n}{n\in\Z},\seq{\opQ_n}{n\in\Z}},\,\ge,\,+,\,\cdot)$
-%is a \hie{lattice}.
-%\end{example}
-%\end{minipage}
-
-
-
-
-
 
 %%=======================================
 %\section{Literature}
