--- a/common/randseq_dsp.tex
+++ b/common/randseq_dsp.tex
@@ -351,27 +351,6 @@ be the \fncte{impulse response} of $\opH$.
 \index{whitening filter}
 \label{sec:d-whiten}
 %=======================================
-\begin{figure}[h]
-  \centering
-  \includegraphics{graphics/pz_minphase.pdf}
-  \caption{
-     Poles ($\times$) and zeros ($o$) of a \prope{minimum phase} filter
-     \label{fig:w_pz_minphase}
-     }
-\end{figure}
-%---------------------------------------
-\begin{definition}
-\index{minimum phase}
-\index{rational expression}
-%---------------------------------------
-Let $\ZH(z)$ be the z-transform of the impulse response of a filter.
-If $\ZH(z)$ can be expressed as a rational expression with poles and zeros
-$r_ne^{i\theta_n}$,
-then the filter is \textbf{minimum phase} if each $r_n<1$
-(all roots lie inside the unit circle in the complex $z$-plane).
-\end{definition}
-See \prefp{fig:w_pz_minphase}.
-
 Note that if $\fL(z)$ has a root at $z=re^{i\theta}$, then
 $\fL^\ast(1/z^\ast)$ has a root at
 \begin{align*}
@@ -385,9 +364,9 @@ then $\fL^\ast(1/z^\ast)$ has a root directly opposite across the unit circle
 boundary (see \prefp{fig:z-roots}).
 A causal stable filter $\ZH(z)$ must have all of its poles inside
 the unit circle.
-A minimum phase filter is a filter with both its poles and zeros inside the
-unit circle.
-One advantage of a minimum phase filter is that its recipricol
+A filter has \prope{minimum phase} \xref{def:minphase} if both its poles and zeros 
+are inside the unit circle.
+One advantage of a minimum phase filter is that its inverse
 (zeros become poles and poles become zeros)
 is also causal and stable.
 
