--- a/common/wavelets/wavstrct.tex
+++ b/common/wavelets/wavstrct.tex
@@ -1076,7 +1076,7 @@ Examples begin in the next chapter which is about a property called the \prope{p
 %The very minimal of requirements, it seems is a \prope{partition of unity} \xref{chp:pounity}.
 Other design constraints leading to wavelets with more ``powerful" properties include 
 \prope{vanishing moments} \xref{chp:vanish}, \prope{orthonormality}\ifsxref{ortho}{chp:ortho},
-\prope{compact support}\ifsxref{compactp}{chp:compactp}, and \prope{minimum phase} \xref{def:ztr_minphase}.
+\prope{compact support}\ifsxref{compactp}{chp:compactp}, and \prope{minimum phase} \xref{def:minphase}.
 
 %Here are some examples of \structe{wavelet systems} \xref{def:wavsys}:
 %\begin{longtable}{|l||ll||c|c|c|c|c|}
